--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" routerLink="register">Register</a>
+            <a class="nav-link" *ngIf="!isLoggedIn()" routerLink="register">Register</a>
           </li>
           <li class="nav-item" *ngIf="!isLoggedIn()">
             <a  class="nav-link" routerLink="login">Login</a>
@@ -42,8 +42,14 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="manage-role">Role</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="assign-role">Assign</a>
+          </li>
         </ul>
       </div>
     </nav>
     <router-outlet></router-outlet>
   </div>
+
+
+  
