--- a/src/app/assign-role/assign-role.component.html
+++ b/src/app/assign-role/assign-role.component.html
@@ -1,1 +1,31 @@
-<p>assign-role works!</p>
+<mat-accordion multi="true">
+    <table mat-table [dataSource]="roleDisplay">
+
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>Email</th>
+            <td mat-cell *matCellDef="let element">{{element.email}}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.firstName}} {{element.lastName}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef>Role</th>
+            <td mat-cell *matCellDef="let element">{{element.role}}</td>
+        </ng-container>
+    
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="warn" (click)="onEdit(element.id)">Edit</button> &nbsp;
+                <button mat-raised-button color="accent" *ngIf="!element.isLocked" (click)="onLock(element.id, element.isLocked)">Lock</button>
+                <button mat-raised-button color="accent" *ngIf="element.isLocked" (click)="onLock(element.id, element.isLocked)">Unlock</button> 
+            </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
+        <tr mat-row *matRowDef="let row; columns:displayColumn"></tr>
+    </table>
+    </mat-accordion>
