--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,38 @@
-<h3>Login</h3>
+<h1>Login</h1>
 
-<h2>{{resMsg}}</h2>
 
-<form [formGroup]="loginForm">
 
-    <div class="form-group">
-        <label>Email</label>
-        <input formControlName="email" class="form-control" placeholder="enter the email">
-    </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input formControlName="password" class="form-control" placeholder="enter the email">
-    </div>
-    <div class="form-group">
-        <br/>
-        <button type="submit" (click)="login()" class="btn btn-info">Login</button>
-    </div>
-</form>
+<mat-grid-list cols="2" rowHeight="100px" gutterSize="10px"  [formGroup]="loginForm">
+
+
+  <mat-grid-tile>
+    <mat-form-field appearance="fill" color="accent">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email">
+      <mat-error *ngIf="this.Email.invalid">{{getEmailErrors()}}</mat-error>
+    </mat-form-field>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-form-field appearance="fill" color="accent">
+      <mat-label>Passoword</mat-label>
+      <input matInput [type]="hide ? 'password': 'text'" formControlName="password">
+      <button mat-icon-button matSuffix (click)="hide = !hide">
+        <mat-icon>{{hide ? 'visibility_off':'visibility'}}</mat-icon>
+      </button>
+      <mat-error *ngIf="this.Password.invalid">{{getPasswordErrors()}}</mat-error>
+    </mat-form-field>
+  </mat-grid-tile>
+
+  <mat-grid-tile colspan="2" >
+      <button mat-flat-button color="accent" class="create-account-btn" (click)="login()" [disabled]="loginForm.invalid" >Login</button>
+  </mat-grid-tile>
+
+
+
+</mat-grid-list>
+
+<div class="login-link">
+  <span>Don't have an account?</span>
+  <button mat-stroked-button color="accent" routerLink="/register">Register</button>
+  </div>
