--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,47 +2,89 @@
 
 <h2>{{resMsg}}</h2>
 
-<form [formGroup]="registerForm">
-        <div class="form-group">
-            <label>FirstName</label>
-            <input formControlName="firstName" class="form-control" placeholder="Enter firstName">
-        </div>
-        <div class="form-group">
-            <label>lastName</label>
-            <input formControlName="lastName" class="form-control" placeholder="Enter lastName">
-        </div>
-        <div class="form-group">
-            <label>UserName</label>
-            <input formControlName="userName" class="form-control" placeholder="Enter username">
-        </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="email" formControlName="email" class="form-control" placeholder="Enter Email">
-        </div>
-        <div class="form-group">
-            <label>password</label>
-            <input type="password" formControlName="password" class="form-control" placeholder="Enter password">
-        </div>
-        <div class="form-group">
-            <label>DOB</label>
-            <input type="date" formControlName="dob" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Gender</label>
-            <input formControlName="gender" class="form-control" placeholder="Enter Gender">
-        </div>
-        <div class="form-group">
-            <label>Mobile</label>
-            <input type="number" formControlName="mobile" class="form-control" placeholder="Enter Mobile">
-        </div>
-        <div class="form-group">
-            <label>City</label>
-            <input type="text" formControlName="city" class="form-control" placeholder="Enter City">
-        </div>
-        <div class="form-group">
-            <button type="submit" (click)="register()"  class="btn btn-info">Register</button>
-        </div>
-        <div>
-            Already have an account? <a class="btn btn-dark" routerLink="/login">Login</a>
-        </div>
+<form [formGroup]="registerForm" class="example-form">
+
+  <div class="form-row">
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>First Name</mat-label>
+        <input matInput formControlName="firstName" placeholder="Enter first name">
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Last Name</mat-label>
+        <input matInput formControlName="lastName" placeholder="Enter last name">
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Username</mat-label>
+        <input matInput formControlName="userName" placeholder="Enter username">
+      </mat-form-field>
+    </div>
+
+  </div>
+
+  <div class="form-row">
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" placeholder="Enter password">
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Date of Birth</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="dob">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email" placeholder="Enter Email">
+      </mat-form-field>
+    </div>
+
+  </div>
+
+  <div class="form-row">
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Mobile</mat-label>
+        <input matInput type="number" formControlName="mobile" placeholder="Enter mobile">
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>Gender</mat-label>
+        <input matInput formControlName="gender" placeholder="Enter Gender">
+      </mat-form-field>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="example-full-width">
+        <mat-label>City</mat-label>
+        <input matInput formControlName="city" placeholder="Enter city">
+      </mat-form-field>
+    </div>
+
+  </div>
+
+  <button mat-raised-button color="primary" (click)="register()">Register</button>
+
+  <div>
+    Already have an account? <a mat-button routerLink="/login">Login</a>
+  </div>
+
 </form>
