--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,34 +1,55 @@
 <div class="container">
-    <form [formGroup]="taskForm">
-       <div class="form-group">
-        <label>Title</label>
-        <input formControlName="title" class="form-control" placeholder="enter the title">
-       </div>
+    <form [formGroup]="taskForm" class="example-form mt-5">
+        <div class="form-row">
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Title</mat-label>
+                <input matInput formControlName="title" placeholder="Enter the title">
+            </mat-form-field>
 
-       <div class="form-group">
-        <label>Description</label>
-        <textarea formControlName="description" class="form-control" placeholder="enter the Description"></textarea>
-       </div>
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Description</mat-label>
+                <textarea matInput formControlName="description" placeholder="Enter the Description"></textarea>
+            </mat-form-field>
 
-       <div class="form-group">
-        <label>DueDate</label>
-        <input type="date" formControlName="duedate" class="form-control" >
-       </div>
+            <!-- <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Due Date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="duedate">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field> -->
 
-       <div class="form-group">
-        <label>Status</label>
-        <input type="status" formControlName="status" class="form-control" >
-       </div>
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Due Date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="duedate">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker [dateClass]="dateClass" #picker>Enter date</mat-datepicker>
+              </mat-form-field>
+              
+        </div>
+        <div class="form-row">
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="status">
+                  <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
+                </mat-select>
+              </mat-form-field>
 
-       <div class="form-group mt-3">
-        <select formControlName="assign" id="Id" class="form-control">
-            <option *ngFor="let user of RoleList" [value]="user.id">{{user.name}}</option>
-        </select>
-       </div>
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Assign</mat-label>
+                <mat-select formControlName="assign" id="Id">
+                    <mat-option *ngFor="let user of RoleList" [value]="user.id">{{user.name}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill" class="form-field small-field">
+                <mat-label>Priority</mat-label>
+                <mat-select formControlName="priority">
+                  <mat-option *ngFor="let priority of priorityList" [value]="priority">{{ priority }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            <div class="button-row">
+                <button mat-raised-button color="primary" (click)="task()">Add</button>
+            </div>
+        </div>
     </form>
-
-    <div class="form-group">
-        <br>
-        <button type="submit" (click)="task()" class="btn btn-success">Add</button>
-    </div>
 </div>
