--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
     .navbar {
       background-color: #f8f9fa;
       border-bottom: 1px solid #dee2e6;
@@ -52,4 +52,16 @@
   </div>
 
 
-  
+   -->
+   <app-page-header (menuClicked)="sideNav.toggle()"></app-page-header>
+<mat-sidenav-container>
+  <mat-sidenav mode="side" #sideNav opened class="mat-elevation-z6">
+    <app-side-nav></app-side-nav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+   <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+<app-page-footer></app-page-footer>
