--- a/src/app/assign-role/assign-role.component.html
+++ b/src/app/assign-role/assign-role.component.html
@@ -1,31 +1,38 @@
 <mat-accordion multi="true">
+    <div class="table-container">
     <table mat-table [dataSource]="roleDisplay">
-
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>Email</th>
-            <td mat-cell *matCellDef="let element">{{element.email}}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.firstName}} {{element.lastName}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="role">
-            <th mat-header-cell *matHeaderCellDef>Role</th>
-            <td mat-cell *matCellDef="let element">{{element.role}}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Actions</th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="warn" (click)="onEdit(element.id)">Edit</button> &nbsp;
-                <button mat-raised-button color="accent" *ngIf="!element.isLocked" (click)="onLock(element.id, element.isLocked)">Lock</button>
-                <button mat-raised-button color="accent" *ngIf="element.isLocked" (click)="onLock(element.id, element.isLocked)">Unlock</button> 
-            </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
-        <tr mat-row *matRowDef="let row; columns:displayColumn"></tr>
+  
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{element.email}}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{element.firstName}} {{element.lastName}}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef>Role</th>
+        <td mat-cell *matCellDef="let element">{{element.role}}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <span mat-raised-button color="warn" (click)="onEdit(element.id)" style="cursor: pointer;"> <mat-icon>edit</mat-icon></span> &nbsp;
+          <span mat-raised-button color="accent" style="cursor: pointer;"
+                  *ngIf="shouldShowLockButton(element)"
+                  (click)="onLock(element.id)"><mat-icon>lock</mat-icon></span>
+          <span mat-raised-button color="warning" style="cursor: pointer;"
+                  *ngIf="shouldShowUnlockButton(element)"
+                  (click)="onLock(element.id)"><mat-icon>lock_open</mat-icon></span>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayColumn"></tr>
+      <tr mat-row *matRowDef="let row; columns:displayColumn"></tr>
     </table>
-    </mat-accordion>
+</div>
+  </mat-accordion>
+  
