--- a/src/app/edit-assign-role/edit-assign-role.component.html
+++ b/src/app/edit-assign-role/edit-assign-role.component.html
@@ -1,51 +1,48 @@
 <mat-card class="add-role">
     <mat-card-header>
-        <mat-card-title>Assign Role</mat-card-title>
-        <!-- <mat-card-title>{{msg}}</mat-card-title> -->
     </mat-card-header>
+  
+    <mat-card-content class="form-container">
+      <mat-card-title >Assign Role</mat-card-title>
 
-    <mat-card-content>
+      <form [formGroup]="assignForm">
+        <mat-form-field appearance="outline" >
+          <mat-label>Email</mat-label>
+          <input readonly formControlName="email" matInput id="email">
+        </mat-form-field>
+  
+        <br>
+  
+        <mat-form-field appearance="outline" >
+          <mat-label>Name</mat-label>
+          <input readonly matInput formControlName="name" id="name">
+        </mat-form-field>
+  
+        <br>
+  
+        <mat-form-field appearance="outline">
+          <mat-label>Select Role</mat-label>
+          <mat-select formControlName="role" id="role">
+            <mat-option *ngFor="let role of rolesList" [value]="role.name">
+              {{role.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
 
-        <form [formGroup]="assignForm">
-            <mat-form-field appearance="fill" color="accent">
-                <mat-label>
-                    Email
-                </mat-label>
-                <input readonly formControlName="email" matInput id="email" >
-                <!-- <mat-error *ngIf="this.name.invalid">Required</mat-error> -->
-            </mat-form-field>
-            <br>
-            <mat-form-field appearance="fill" color="accent">
-                <mat-label>
-                    Name
-                </mat-label>
-                <input readonly matInput formControlName="name" id="name">
-                <!-- <mat-error *ngIf="this.name.invalid">Required</mat-error> -->
-            </mat-form-field>
-            <br>
-            <!-- <div class="form-group mt-3">
-                <select formControlName="Role" id="Id" class="form-control">
-                    <option *ngFor="let role of rolesList" [value]="role.id">{{role.name}}</option>
-                </select>
-            </div> -->
+        
 
-            <mat-form-field>
-                <mat-label>Select Role</mat-label>
-                <mat-select formControlName="role" id="Id" >
-                  <mat-option *ngFor="let role of rolesList" [value]="role.id">
-                    {{role.name}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <br>
-              
-              <button type="submit" mat-raised-button (click)="assignRole()" color="primary">Save</button>          
-
-        </form>
+  
+        <br>
+  
+        <button type="submit" mat-raised-button (click)="assignRole()" color="primary">Save</button>
+        &nbsp;
+        <button type="submit" mat-raised-button routerLink="/assign-role">Cancel</button>
+  
+      </form>
     </mat-card-content>
-
+  
     <mat-card-actions>
-        <!-- <button mat-raised-button color="" (click)="addRole()">Save</button> -->
+      <!-- Optional: Add actions if needed -->
     </mat-card-actions>
-</mat-card>
+  </mat-card>
+  
