--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,37 +1,28 @@
-:host {
-    display: block;
-    padding: 2rem;
-    width: 500px;
-    border-radius: 1rem;
-    margin: 3rem auto 0;
-    background-color: rgba(255, 255, 255, 0.1);
-  }
-  
-  h1 {
-    text-align: center;
-    font-size: 2rem;
-  }
-  
-  mat-grid-list {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-  }
-  
-  /* mat-grid-list .login-btn {
-    width: 75%;
-    height: 50%;
-    font-size: 1.2rem;
-  } */
-  
-  /* mat-form-field {
-    width: 66.67%;
-    transform: scale(1.5);
-  } */
-  
-  .login-link {
-    width: 350px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
+/* Add this to your CSS */
+.login-card {
+  width: 400px; /* Adjust as needed */
+  margin: 25px auto; /* Center the card and add margin top and bottom */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Box shadow for a subtle effect */
+}
+
+mat-card-content {
+  padding: 16px; /* Adjust as needed */
+}
+
+.login-btn {
+  width: 50%;
+  margin-top: 16px;
+}
+
+.login-link {
+  text-align: center;
+  margin-top: 16px;
+}
+
+.login-link span {
+  margin-right: 8px;
+}
+
+.full-width {
+  width: 100%;
+}
