--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,33 @@
-<h1>Login</h1>
+<mat-card class="login-card">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
 
+  <mat-card-content>
+    <form [formGroup]="loginForm">
 
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email">
+        <mat-error *ngIf="this.Email.invalid">{{getEmailErrors()}}</mat-error>
+      </mat-form-field>
 
-<mat-grid-list cols="2" rowHeight="100px" gutterSize="10px"  [formGroup]="loginForm">
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Password</mat-label>
+        <input matInput [type]="hide ? 'password': 'text'" formControlName="password">
+        <button mat-icon-button matSuffix (click)="hide = !hide">
+          <mat-icon>{{hide ? 'visibility_off':'visibility'}}</mat-icon>
+        </button>
+        <mat-error *ngIf="this.Password.invalid">{{getPasswordErrors()}}</mat-error>
+      </mat-form-field>
 
+      <button mat-flat-button color="accent" class="login-btn" (click)="login()" [disabled]="loginForm.invalid">Login</button>
 
-  <mat-grid-tile>
-    <mat-form-field appearance="fill" color="accent">
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email">
-      <mat-error *ngIf="this.Email.invalid">{{getEmailErrors()}}</mat-error>
-    </mat-form-field>
-  </mat-grid-tile>
+    </form>
+  </mat-card-content>
 
-  <mat-grid-tile>
-    <mat-form-field appearance="fill" color="accent">
-      <mat-label>Passoword</mat-label>
-      <input matInput [type]="hide ? 'password': 'text'" formControlName="password">
-      <button mat-icon-button matSuffix (click)="hide = !hide">
-        <mat-icon>{{hide ? 'visibility_off':'visibility'}}</mat-icon>
-      </button>
-      <mat-error *ngIf="this.Password.invalid">{{getPasswordErrors()}}</mat-error>
-    </mat-form-field>
-  </mat-grid-tile>
-
-  <mat-grid-tile colspan="2" >
-      <button mat-flat-button color="accent" class="create-account-btn" (click)="login()" [disabled]="loginForm.invalid" >Login</button>
-  </mat-grid-tile>
-
-
-
-</mat-grid-list>
-
-<div class="login-link">
-  <span>Don't have an account?</span>
-  <button mat-stroked-button color="accent" routerLink="/register">Register</button>
-  </div>
+  <mat-card-actions class="login-link">
+    <span>Don't have an account?</span>
+    <button mat-stroked-button color="accent" routerLink="/register">Register</button>
+  </mat-card-actions>
+</mat-card>
