--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,29 +1,38 @@
-<h3>Register</h3>
+<!-- <h3>Register</h3>
 
-<h2>{{resMsg}}</h2>
+<h2>{{ resMsg }}</h2>
 
 <form [formGroup]="registerForm" class="example-form">
 
   <div class="form-row">
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>First Name</mat-label>
         <input matInput formControlName="firstName" placeholder="Enter first name">
+        <mat-error *ngIf="registerForm.get('firstName').hasError('required')">First Name is required</mat-error>
+        <mat-error *ngIf="registerForm.get('firstName').hasError('minlength')">First Name must be at least 3 characters
+          long</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Last Name</mat-label>
         <input matInput formControlName="lastName" placeholder="Enter last name">
+        <mat-error *ngIf="registerForm.get('lastName').hasError('required')">Last Name is required</mat-error>
+        <mat-error *ngIf="registerForm.get('lastName').hasError('minlength')">Last Name must be at least 3 characters
+          long</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Username</mat-label>
         <input matInput formControlName="userName" placeholder="Enter username">
+        <mat-error *ngIf="registerForm.get('userName').hasError('required')">Username is required</mat-error>
+        <mat-error *ngIf="registerForm.get('userName').hasError('minlength')">Username must be at least 3 characters
+          long</mat-error>
       </mat-form-field>
     </div>
 
@@ -32,25 +41,31 @@
   <div class="form-row">
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" placeholder="Enter password">
+        <mat-error *ngIf="registerForm.get('password').hasError('required')">Password is required</mat-error>
+        <mat-error *ngIf="registerForm.get('password').hasError('pattern')">Password must contain at least one uppercase
+          letter, one lowercase letter, one special character, and one number</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Date of Birth</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="dob">
+        <input matInput [matDatepicker]="picker" [matDatepickerFilter]="myFilter" formControlName="dob">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="registerForm.get('dob').hasError('required')">Date of Birth is required</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Email</mat-label>
         <input type="email" matInput formControlName="email" placeholder="Enter Email">
+        <mat-error *ngIf="registerForm.get('email').hasError('required')">Email is required</mat-error>
+        <mat-error *ngIf="registerForm.get('email').hasError('email')">Enter a valid email address</mat-error>
       </mat-form-field>
     </div>
 
@@ -59,32 +74,122 @@
   <div class="form-row">
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Mobile</mat-label>
         <input matInput type="number" formControlName="mobile" placeholder="Enter mobile">
+        <mat-error *ngIf="registerForm.get('mobile').hasError('required')">Mobile is required</mat-error>
+        <mat-error *ngIf="registerForm.get('mobile').hasError('pattern')">Mobile must be a 10-digit number</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field appearance="fill" class="form-field small-field">
         <mat-label>Gender</mat-label>
-        <input matInput formControlName="gender" placeholder="Enter Gender">
+        <mat-select formControlName="gender">
+          <mat-option *ngFor="let gender of genderList" [value]="gender">{{ gender }}</mat-option>
+        </mat-select>
+        <mat-error *ngIf="registerForm.get('gender').hasError('required')">Gender is required</mat-error>
       </mat-form-field>
     </div>
 
     <div class="form-group">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>City</mat-label>
         <input matInput formControlName="city" placeholder="Enter city">
+        <mat-error *ngIf="registerForm.get('city').hasError('required')">City is required</mat-error>
       </mat-form-field>
     </div>
 
   </div>
 
-  <button mat-raised-button color="primary" (click)="register()">Register</button>
+  <button mat-raised-button color="primary" (click)="register()" [disabled]="registerForm.invalid">Register</button>
 
   <div>
     Already have an account? <a mat-button routerLink="/login">Login</a>
   </div>
 
-</form>
+</form> -->
+
+
+<mat-card class="add">
+  <mat-card-header>
+    <mat-card-header>
+      <mat-card-title>Register</mat-card-title>
+    </mat-card-header>
+  </mat-card-header>
+
+  <mat-card-content>
+    <form [formGroup]="registerForm">
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input matInput formControlName="firstName" placeholder="Enter first name">
+        <mat-error *ngIf="registerForm.get('firstName').hasError('required')">First Name is required</mat-error>
+        <mat-error *ngIf="registerForm.get('firstName').hasError('minlength')">First Name must be at least 3 characters
+          long</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input matInput formControlName="lastName" placeholder="Enter last name">
+        <mat-error *ngIf="registerForm.get('lastName').hasError('required')">Last Name is required</mat-error>
+        <mat-error *ngIf="registerForm.get('lastName').hasError('minlength')">Last Name must be at least 3 characters
+          long</mat-error>
+      </mat-form-field>
+
+     
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput formControlName="email" placeholder="Enter Email">
+        <mat-error *ngIf="registerForm.get('email').hasError('required')">Email is required</mat-error>
+        <mat-error *ngIf="registerForm.get('email').hasError('email')">Enter a valid email address</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" placeholder="Enter password">
+        <mat-error *ngIf="registerForm.get('password').hasError('required')">Password is required</mat-error>
+        <mat-error *ngIf="registerForm.get('password').hasError('pattern')">Password must contain at least one uppercase
+          letter, one lowercase letter, one special character, and one number</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Date of Birth</mat-label>
+        <input matInput [matDatepicker]="picker" [matDatepickerFilter]="myFilter" formControlName="dob">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+        <mat-error *ngIf="registerForm.get('dob').hasError('required')">Date of Birth is required</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Mobile No.</mat-label>
+        <input matInput type="number" formControlName="mobile" placeholder="Enter mobile">
+        <mat-error *ngIf="registerForm.get('mobile').hasError('required')">Mobile No. is required</mat-error>
+        <mat-error *ngIf="registerForm.get('mobile').hasError('pattern')">Mobile No. must be a 10-digit
+          number</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" >
+        <mat-label>Gender</mat-label>
+        <mat-select formControlName="gender">
+          <mat-option *ngFor="let gender of genderList" [value]="gender">{{ gender }}</mat-option>
+        </mat-select>
+        <mat-error *ngIf="registerForm.get('gender').hasError('required')">Gender is required</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>City</mat-label>
+        <input matInput formControlName="city" placeholder="Enter city">
+        <mat-error *ngIf="registerForm.get('city').hasError('required')">City is required</mat-error>
+      </mat-form-field>
+
+
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+  <button mat-raised-button color="primary" (click)="register()" [disabled]="registerForm.invalid">Register</button> &nbsp;
+   Already have an account? &nbsp; <a mat-stroked-button routerLink="/login" color="accent">Login</a>
+    
+  </mat-card-actions>
+</mat-card>
