--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     justify-content: center;
 }
@@ -28,3 +28,51 @@
     display: flex;
     justify-content: center;
 }
+
+@import 'ngx-toastr/toastr';
+ */
+
+ /* :host {
+    display: flex;
+    width: 90%;
+    gap: 2rem;
+    margin: 3rem auto;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .add form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: flex-start;
+  }
+  
+  .add form button {
+    width: 200px;
+    height: 50px;
+  } */
+  
+
+  /* Add this to your CSS */
+.add {
+    width: 400px; /* Adjust as needed */
+    margin: auto;
+  }
+  
+  .form-row {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 7px; /* Adjust as needed */
+  }
+  
+  .large-textarea textarea {
+    min-height: 100px; /* Adjust as needed */
+  }
+  
+  .mat-card-content {
+    padding: 16px; /* Adjust as needed */
+  }
+  
+
