--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,55 +1,133 @@
-<div class="container">
+<!-- <div class="container">
     <form [formGroup]="taskForm" class="example-form mt-5">
         <div class="form-row">
             <mat-form-field appearance="fill" class="form-field small-field">
                 <mat-label>Title</mat-label>
                 <input matInput formControlName="title" placeholder="Enter the title">
+                <mat-error *ngIf="taskForm.get('title').hasError('required')">Title is required</mat-error>
+                <mat-error *ngIf="taskForm.get('title').hasError('minlength')">Title must be at least 3 characters
+                    long</mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="form-field small-field">
                 <mat-label>Description</mat-label>
                 <textarea matInput formControlName="description" placeholder="Enter the Description"></textarea>
+                <mat-error *ngIf="taskForm.get('description').hasError('required')">Description is required</mat-error>
+                <mat-error *ngIf="taskForm.get('description').hasError('minlength')">Description must be at least 20
+                    characters long</mat-error>
             </mat-form-field>
 
-            <!-- <mat-form-field appearance="fill" class="form-field small-field">
-                <mat-label>Due Date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="duedate">
+            <mat-form-field class="example-full-width">
+                <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker" placeholder="Choose a date"
+                    formControlName="duedate">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field> -->
-
-            <mat-form-field appearance="fill" class="form-field small-field">
-                <mat-label>Due Date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="duedate">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker [dateClass]="dateClass" #picker>Enter date</mat-datepicker>
-              </mat-form-field>
-              
+                <mat-error *ngIf="taskForm.get('duedate').hasError('required')">Due date is required</mat-error>
+                <mat-error *ngIf="taskForm.get('duedate').hasError('myFilter')">Invalid due date</mat-error>
+            </mat-form-field>
         </div>
+
         <div class="form-row">
             <mat-form-field appearance="fill" class="form-field small-field">
                 <mat-label>Status</mat-label>
                 <mat-select formControlName="status">
-                  <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
+                    <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
                 </mat-select>
-              </mat-form-field>
+                <mat-error *ngIf="taskForm.get('status').hasError('required')">Status is required</mat-error>
+            </mat-form-field>
 
             <mat-form-field appearance="fill" class="form-field small-field">
                 <mat-label>Assign</mat-label>
                 <mat-select formControlName="assign" id="Id">
                     <mat-option *ngFor="let user of RoleList" [value]="user.id">{{user.name}}</mat-option>
                 </mat-select>
+                <mat-error *ngIf="taskForm.get('assign').hasError('required')">Assignee is required</mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="form-field small-field">
                 <mat-label>Priority</mat-label>
                 <mat-select formControlName="priority">
-                  <mat-option *ngFor="let priority of priorityList" [value]="priority">{{ priority }}</mat-option>
+                    <mat-option *ngFor="let priority of priorityList" [value]="priority">{{ priority }}</mat-option>
                 </mat-select>
-              </mat-form-field>
+                <mat-error *ngIf="taskForm.get('priority').hasError('required')">Priority is required</mat-error>
+            </mat-form-field>
+        </div>
+
+        <div class="form-row">
             <div class="button-row">
-                <button mat-raised-button color="primary" (click)="task()">Add</button>
+                <button mat-raised-button color="primary" (click)="task()" [disabled]="taskForm.invalid">Add</button>
             </div>
         </div>
     </form>
-</div>
+</div> -->
+
+
+<mat-card class="add mt-2 mb-2">
+    <mat-card-header>
+        <mat-card-title>Add New Task</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+        <form [formGroup]="taskForm">
+            <!-- First Row: Title, Description, Due Date -->
+            <div class="form-row">
+                <mat-form-field appearance="outline">
+                    <mat-label>Title</mat-label>
+                    <input matInput formControlName="title" placeholder="Enter the Title">
+                    <mat-error *ngIf="taskForm.get('title').hasError('required')">Title is required</mat-error>
+                    <mat-error *ngIf="taskForm.get('title').hasError('minlength')">Title must be at least 3 characters
+                        long</mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="large-textarea">
+                    <mat-label>Description</mat-label>
+                    <textarea matInput formControlName="description" placeholder="Enter the Description"></textarea>
+                    <mat-error *ngIf="taskForm.get('description').hasError('required')">Description is
+                        required</mat-error>
+                    <mat-error *ngIf="taskForm.get('description').hasError('minlength')">Description must be at least 20
+                        characters long</mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker"
+                        placeholder="Choose Due date" formControlName="duedate">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-error *ngIf="taskForm.get('duedate').hasError('required')">Due date is required</mat-error>
+                    <mat-error *ngIf="taskForm.get('duedate').hasError('myFilter')">Invalid due date</mat-error>
+                </mat-form-field>
+            </div>
+
+            <!-- Second Row: Status, Assign, Priority -->
+            <div class="form-row">
+                <mat-form-field appearance="outline">
+                    <mat-label>Status</mat-label>
+                    <mat-select formControlName="status">
+                        <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="taskForm.get('status').hasError('required')">Status is required</mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Assign</mat-label>
+                    <mat-select formControlName="assign" id="Id">
+                        <mat-option *ngFor="let user of RoleList" [value]="user.id">{{user.name|titlecase}}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="taskForm.get('assign').hasError('required')">Assignee is required</mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Priority</mat-label>
+                    <mat-select formControlName="priority">
+                        <mat-option *ngFor="let priority of priorityList" [value]="priority">{{ priority }}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="taskForm.get('priority').hasError('required')">Priority is required</mat-error>
+                </mat-form-field>
+            </div>
+        </form>
+    </mat-card-content>
+
+    <mat-card-actions>
+        <button mat-flat-button color="primary" (click)="task()" [disabled]="taskForm.invalid">Add</button>
+    </mat-card-actions>
+</mat-card>
